# api-test

./: requirements.txt  routers.py  setup.cfg
routes/: users.py
src/api/: main.py
src/apitest/: main.py  routers.py
src/apitest/models/: user.py
src/apitest/routes/: users.py
tests/: test_routes.py
