[metadata]
name = apitest
description = API Test using fastapi
author = Justin Pfeifer
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    requests
    fastapi
    pydantic
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src